--- a/default/data/ui/html/eventdatahtml.html
+++ b/default/data/ui/html/eventdatahtml.html
@@ -72,15 +72,12 @@ styles in <div> tags, similar to Bootstrap's grid system.
             <label>addEventEndYear</label>
         </div>
         <br />
-        <div class="input input-dropdown" id="input13">
-            <label>showShirt</label>
-        </div>
         <div class="form-submit" id="search_btn">
             <button class="btn btn-primary submit">Submit</button>
         </div>
     
     <div>
-        <div class="input input-text" id="input14">
+        <div class="input input-text" id="input13">
             <label>Enter a Key ID from the table below to delete a row.</label>
         </div>
         <div><button id="deleteRecord">Delete event</button></div>
@@ -253,7 +250,7 @@ require([
         var search1 = new SearchManager({
             "id": "search1",
             "earliest_time": "0",
-            "search": "| inputlookup kvstore_event_lookup | eval KeyID = _key | table KeyID, addEventName, addEventId, addEventCity, addEventCountry, addEventClass, addEventOrganiserEmail, addEventStartDay, addEventStartMonth, addEventStartYear, addEventEndDay, addEventEndMonth, addEventEndYear, showShirt",
+            "search": "| inputlookup kvstore_event_lookup | eval KeyID = _key | table KeyID, addEventName, addEventId, addEventCity, addEventCountry, addEventClass, addEventOrganiserEmail, addEventStartDay, addEventStartMonth, addEventStartYear, addEventEndDay, addEventEndMonth, addEventEndYear",
             "status_buckets": 0,
             "cancelOnUnload": true,
             "latest_time": "$latest$",
@@ -823,30 +820,14 @@ require([
             FormUtils.handleValueChange(input12);
         });
 
-         var input13 = new DropdownInput({
+        var input13 = new TextInput({
             "id": "input13",
-            "choices": [
-                {"label": "Yes", "value": "true"},
-                {"label": "No", "value": "false"}
-            ],
-            "showClearButton": true,
-            "selectFirstChoice": false,
-            "value": "$form.showShirt$",
+            "value": "$form.KeyID$",
             "el": $('#input13')
         }, {tokens: true}).render();
 
         input13.on("change", function(newValue) {
             FormUtils.handleValueChange(input13);
-        });
-
-        var input14 = new TextInput({
-            "id": "input14",
-            "value": "$form.KeyID$",
-            "el": $('#input14')
-        }, {tokens: true}).render();
-
-        input14.on("change", function(newValue) {
-            FormUtils.handleValueChange(input14);
         });
 
         // 
@@ -904,7 +885,6 @@ require([
             var form_addEventEndDay = tokens.get("addEventEndDay");
             var form_addEventEndMonth = tokens.get("addEventEndMonth");
             var form_addEventEndYear = tokens.get("addEventEndYear");
-            var form_showShirt = tokens.get("showShirt");
             
             // Create a dictionary to store the field names and values
             var record = { 
@@ -919,8 +899,7 @@ require([
                 "addEventStartYear": form_addEventStartYear,
                 "addEventEndDay": form_addEventEndDay,
                 "addEventEndMonth": form_addEventEndMonth,
-                "addEventEndYear": form_addEventEndYear,
-                "showShirt": form_showShirt
+                "addEventEndYear": form_addEventEndYear
             }; 
 
              // Use the request method to send a REST POST request
